--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
-<app-header></app-header>
+<app-header (switchPage)="onSwitchPage($event)"></app-header>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <app-recipes></app-recipes>
-            <app-shopping-list></app-shopping-list>
+            <app-recipes 
+                *ngIf="selectedPage === 'recipes'">
+            </app-recipes>
+            <app-shopping-list 
+                *ngIf="selectedPage === 'shopping-list'">
+            </app-shopping-list>
         </div>
     </div>
 </div>
