--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,6 +9,7 @@
         <app-recipe-item 
             *ngFor="let recipeElement of recipes"
             [recipe]="recipeElement"
+            (onRecipeSelected)="recipeSelected(recipeElement)"
         ></app-recipe-item>
     </div>
 </div>
